test/compile_errors/err_implicit_default_mixed_closure.w
//! expect-check-fail: missing return

fn main:
    let f: fn(bool) -> i32 = flag => {
        if flag:
            return 1
    }
    let _ = f(false)
